no data-transition

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 					</aside>
 				</section>
 
-
+				<section data-transition="none">
+					<h1>What is ML?</h1>
+				</section>
 <!-- Overview -->
 				<section>
 					<h1>Overview</h1>
