--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 
     <!-- Metadata to edit -->
-		<title> A practical introduction to git</title>
+		<title> BGOV Machine Learning Q&A</title>
 		<meta name="author" content="Anna Kennedy">
     <!-- /Metadata to edit -->
 
@@ -41,10 +41,10 @@
 			<div class="slides">
 
         <!-- Title slide -->
-				<section>
-					<h1>A practical introduction to git</h1>
+				<section data-transition="none">
+					<h1>BGOV Machine Learning Q&A</h1>
 					<p>
-						<small>Anna Kennedy</small>
+						<small>Mingming Liu</small>
 					</p>
 					<aside class="notes">
             Some notes here
