--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/simple.css" id="theme">
+		<link rel="stylesheet" href="css/theme/black.css" id="theme">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -42,7 +42,7 @@
 
         <!-- Title slide -->
 				<section data-transition="none">
-					<h1>BGOV Machine Learning Q&A</h1>
+					<h1>BGOV Machine Learning</h1>
 					<p>
 						<small>Mingming Liu</small>
 					</p>
@@ -50,10 +50,46 @@
             Some notes here
 					</aside>
 				</section>
-
+<!-- What is ML? -->
 				<section data-transition="none">
 					<h1>What is ML?</h1>
+					<p class="fragment"><ul>
+						<li>Learning patterns in your data without being explicitly programmed</li>
+						<li>Function that maps features to an output</li>
+						</ul>
+
+					</p>
 				</section>
+<!-- Types of Machine Learning -->
+				<section data-transition="none">
+					<h1>Types of Machine Learning</h1>
+					<p class="fragment"><ul>
+						<li>Supervised Learning</li>
+						<li>Unsupervised Learning</li>
+						<li>Reinforcement Learning</li>
+						</ul>
+					</p>
+				</section>
+
+<!-- Types of Machine Learning -->
+				<section data-transition="none">
+					<h1>Supervised Learning</h1>
+				</section>
+<!-- Unsupervised Learning -->
+				<section data-transition="none">
+						<h1>Unsupervised Learning</h1>
+				</section>
+				
+<!-- Reinforcement Learning -->
+				<section data-transition="none">
+					<h1>Reinforcement Learning</h1>
+				</section>
+
+<!-- Life Cycle of ML -->
+				<section data-transition="none">
+						<h1>Life Cycle of ML</h1>
+				</section>
+	
 <!-- Overview -->
 				<section>
 					<h1>Overview</h1>
