--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
 <!-- Types of Machine Learning -->
 				<section data-transition="none">
 					<h1>Supervised Learning</h1>
+					<p><img width="450" src="img/classification.png" alt="gitlab"></p>
+					<p><img width="450" src="img/regression.jpg" alt="gitlab"></p>
+
 				</section>
 <!-- Unsupervised Learning -->
 				<section data-transition="none">
