--- a/index.html
+++ b/index.html
@@ -74,8 +74,16 @@
 <!-- Types of Machine Learning -->
 				<section data-transition="none">
 					<h1>Supervised Learning</h1>
-					<p><img width="450" src="img/classification1.png" alt="gitlab">
-					<img width="450" src="img/regression1.png" alt="gitlab"></p>
+					<table>
+						<tr>
+							<td>Classification</td>
+							<td>Regression</td>
+						</tr>
+						<tr>
+							<td><img width="450" src="img/classification1.png"></td>
+							<td><img width="450" src="img/regression1.png" alt="gitlab"></td>	
+						</tr>
+					</table>
 
 				</section>
 <!-- Unsupervised Learning -->
