--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
 <!-- Types of Machine Learning -->
 				<section data-transition="none">
 					<h1>Supervised Learning</h1>
-					<table>
+					<table border="0">
 						<tr>
 							<td>Classification</td>
 							<td>Regression</td>
 						</tr>
 						<tr>
 							<td><img width="450" src="img/classification1.png"></td>
-							<td><img width="450" src="img/regression1.png" alt="gitlab"></td>	
+							<td><img width="450" src="img/regression1.png"></td>	
 						</tr>
 					</table>
 
@@ -89,18 +89,59 @@
 <!-- Unsupervised Learning -->
 				<section data-transition="none">
 						<h1>Unsupervised Learning</h1>
+						<table border="0">
+							<tr>
+								<td>Learn structure of unlabled data</td>>
+							</tr>
+							<tr>
+								<td><img width="450" src="img/clustering1.png"></td>
+							</tr>
+						</table>
 				</section>
 				
 <!-- Reinforcement Learning -->
 				<section data-transition="none">
 					<h1>Reinforcement Learning</h1>
+					<table border="0">
+							<tr>
+								<td><img width="450" src="img/Rl_agent.png"></td>
+							</tr>
+					</table>
+					<ul>
+						<li>Learning what to do to maximize reward</li>
+						<li>Explore and exploit</li>
+					</ul>
+
 				</section>
 
 <!-- Life Cycle of ML -->
 				<section data-transition="none">
-						<h1>Life Cycle of ML</h1>
+						<img width="450" src="img/ML-Lifecycle1.png">
 				</section>
-	
+
+<!-- Projects in BGOV -->
+				<section data-transition="none">
+						<h1>Projects in BGOV</h1>
+						<p class="fragment">
+							<ul>
+								<li>Solicitation dollor value prediction</li>
+								<li>Solicitation RFP date prediction</li>>
+								<li>Named entity recognition</li>
+								<li>Document classification</li>
+								<li>Text summary extracton</li>
+							</ul>>
+						</p>
+
+						
+				</section>
+
+<!-- Projects in BGOV -->
+				<section data-transition="none">
+						<img width="450" src="img/search_card1.png">
+				</section>
+
+
+
 <!-- Overview -->
 				<section>
 					<h1>Overview</h1>
