--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				</section>
 <!-- What is ML? -->
 				<section data-transition="none">
-					<h1>What is ML?</h1>
+					<h2>What is ML?</h2>
 					<p class="fragment"><ul>
 						<li>Learning patterns in your data without being explicitly programmed</li>
 						<li>Function that maps features to an output</li>
@@ -62,7 +62,7 @@
 				</section>
 <!-- Types of Machine Learning -->
 				<section data-transition="none">
-					<h1>Types of Machine Learning</h1>
+					<h2>Types of Machine Learning</h2>
 					<p class="fragment"><ul>
 						<li>Supervised Learning</li>
 						<li>Unsupervised Learning</li>
@@ -89,14 +89,8 @@
 <!-- Unsupervised Learning -->
 				<section data-transition="none">
 						<h1>Unsupervised Learning</h1>
-						<table border="0">
-							<tr>
-								<td>Learn structure of unlabled data</td>>
-							</tr>
-							<tr>
-								<td><img width="450" src="img/clustering1.png"></td>
-							</tr>
-						</table>
+						<p>Learn structure of unlabled data</p>
+						<img width="450" src="img/clustering1.png">
 				</section>
 				
 <!-- Reinforcement Learning -->
@@ -125,11 +119,11 @@
 						<p class="fragment">
 							<ul>
 								<li>Solicitation dollor value prediction</li>
-								<li>Solicitation RFP date prediction</li>>
+								<li>Solicitation RFP date prediction</li>
 								<li>Named entity recognition</li>
 								<li>Document classification</li>
 								<li>Text summary extracton</li>
-							</ul>>
+							</ul>
 						</p>
 
 						
