--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <!-- Types of Machine Learning -->
 				<section data-transition="none">
-					<h1>Supervised Learning</h1>
+					<h2>Supervised Learning</h2>
 					<table border="0">
 						<tr>
 							<td>Classification</td>
@@ -88,14 +88,14 @@
 				</section>
 <!-- Unsupervised Learning -->
 				<section data-transition="none">
-						<h1>Unsupervised Learning</h1>
+						<h2>Unsupervised Learning</h2>
 						<p>Learn structure of unlabled data</p>
 						<img width="450" src="img/clustering1.png">
 				</section>
 				
 <!-- Reinforcement Learning -->
 				<section data-transition="none">
-					<h1>Reinforcement Learning</h1>
+					<h2>Reinforcement Learning</h2>
 					<table border="0">
 							<tr>
 								<td><img width="450" src="img/Rl_agent.png"></td>
@@ -110,7 +110,7 @@
 
 <!-- Life Cycle of ML -->
 				<section data-transition="none">
-						<img width="450" src="img/ML-Lifecycle1.png">
+						<img width="450" src="img/ML-Lifecycle.png">
 				</section>
 
 <!-- Projects in BGOV -->
@@ -131,7 +131,7 @@
 
 <!-- Projects in BGOV -->
 				<section data-transition="none">
-						<img width="450" src="img/search_card1.png">
+						<img width="450" src="img/search_card.png">
 				</section>
 
 
