--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 <!-- Life Cycle of ML -->
 				<section data-transition="none">
-						<img width="450" src="img/ML-Lifecycle.png">
+						<img src="img/ML-Lifecycle1.png">
 				</section>
 
 <!-- Projects in BGOV -->
@@ -131,7 +131,7 @@
 
 <!-- Projects in BGOV -->
 				<section data-transition="none">
-						<img width="450" src="img/search_card.png">
+						<img src="img/search_card1.png">
 				</section>
 
 
