--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<section data-transition="none">
 						<h2>Unsupervised Learning</h2>
 						<p>Learn structure of unlabled data</p>
-						<img width="450" src="img/clustering1.png">
+						<img src="img/clustering2.png">
 				</section>
 				
 <!-- Reinforcement Learning -->
@@ -98,7 +98,7 @@
 					<h2>Reinforcement Learning</h2>
 					<table border="0">
 							<tr>
-								<td><img width="450" src="img/Rl_agent.png"></td>
+								<td><img width="600" src="img/Rl_agent.png"></td>
 							</tr>
 					</table>
 					<ul>
@@ -110,7 +110,7 @@
 
 <!-- Life Cycle of ML -->
 				<section data-transition="none">
-						<img src="img/ML-Lifecycle1.png">
+						<img src="img/ml-lifecycle.jpg">
 				</section>
 
 <!-- Projects in BGOV -->
