--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 <!-- Projects in BGOV -->
 				<section data-transition="none">
-						<h1>Projects in BGOV</h1>
+						<h2>Projects in BGOV</h2>
 						<p class="fragment">
 							<ul>
 								<li>Solicitation dollor value prediction</li>
@@ -134,6 +134,10 @@
 						<img src="img/search_card1.png">
 				</section>
 
+<!-- Projects in BGOV -->
+				<section data-transition="none">
+						<img src="img/contact1.png">
+				</section>
 
 
 <!-- Overview -->
