--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 <!-- Projects in BGOV -->
 				<section data-transition="none">
-						<h2>Projects in BGOV</h2>
+						<h2>Projects at BGOV</h2>
 						<p class="fragment">
 							<ul>
 								<li>Solicitation dollor value prediction</li>
