--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8">
 
     <!-- Metadata to edit -->
-		<title> BGOV Machine Learning Q&A</title>
-		<meta name="author" content="Anna Kennedy">
+		<title> BGOV Machine Learning</title>
+		<meta name="author" content="Mingming Liu">
     <!-- /Metadata to edit -->
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -140,7 +140,43 @@
 				</section>
 <!-- Q&A -->
 				<section data-transition="none">
-						<h1>Questions?</h1>
+						<h2>Questions</h2>
+						<p class="fragment" style="font-size:12px;">
+							<ul>
+								<li>What are some of the business use cases that are being resolved by machine learning?</li>
+								<li>What machine learning tools/frameworks are you using?</li>
+									<ul><li>spark ml, scikit-learn, jupyter notebook, nltk, spacy, tensorflow</li></ul>
+							</ul>
+
+						</p>
+				</section>
+
+				<section data-transition="none">
+					<h2>Questions - continued</h2>
+					<p class="fragment" style="font-size:12px;">
+							<ul>
+								<li>What's been your experience in terms of "experimenting" with data / machine learning?</li>
+								  <ul>
+										<li>Do you have a process in getting good "training data"?</li>
+										<li>Do you run most of your training processes in the cloud? Local machines?</li>
+										<ul>
+											<li>Any issues processing very large datasets that require high powered cpus?</li>
+										</ul>
+									</ul>
+							</ul>
+						</p>
+				</section>
+				<section data-transition="none">
+						<h2>Questions - continued</h2>
+						<p class="fragment" style="font-size:12px;">
+								<ul>
+									<li>What's been the experience of moving machine learning models into a "production" environment, that is serving end users?</li>
+									<ul>
+										<li>Is everything running in the cloud?</li>
+										<li>Are we using Bloomberg infrastructure?</li>
+									</ul>	
+								</ul>	
+							</p>
 				</section>
 
 			</div>
